src/test/deca/test_compilateur/context/invalid/created/cast/void_A.deca
// Description :
//    test cast entre un void et A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.39) Cast impossible de <type1> vers <type2>

class A {}
{
(void)(new A());
}
